[package]
name = "{{project-name}}"
version = "0.1.0"
authors = ["ian.zhu <redilove@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.dev]
opt-level = 0
debug = true

[profile.release]
opt-level = 3
debug = false


[dependencies]
